--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -27,7 +27,10 @@ jobs:
               run: echo "Running tests..."
             - name: Failing tests
               if: ${{ inputs.pass-units-tests == false }}
-              run: echo "Failing tests..."
+              run: |
+                   echo "Failing tests..."
+                   exit 1
+
             
     e2e-tests:
         runs-on: ubuntu-latest
