Añadir condiciones entre job .. 4

--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -16,6 +16,7 @@ jobs:
     deploy-nonprod:
         runs-on: ubuntu-latest
         # lint-build OK, unit-tests OK
+        needs: [ lint-build, unit-tests ]
         steps:
             - name: Deploying to nonprod
               run: echo "Deploying to nonprod..."
