--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -28,7 +28,7 @@ jobs:
             - name: Running unit tests
               run: echo "Running tests..."
             - name: Failing tests
-              if: ${{ ! inputs.pass-units-tests == true }}
+              if: ${{ ! inputs.pass-unit-tests == true }}
               run: |
                    echo "Failing tests..."
                    exit 1
